# LameTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xyd/lametest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lame_util.c  native-lib.cpp
app/src/main/java/com/xyd/lametest/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xyd/lametest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
